--- a/index.html
+++ b/index.html
@@ -9,32 +9,36 @@
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/style.css">
 		<link href="https://fonts.googleapis.com/css?family=Arima+Madurai" rel="stylesheet"> 
+		<script src="js/jquery-2.1.4.min.js"></script>
+		<script src="js/bootstrap.min.js"></script>
+
 </head>
 <body>
 <header id="top">
 <nav class="navbar navbar-default" id="header-nav">
-  <div class="container">
+<div class="container">
+
 <div class="navbar-header">
-	  <div id="brand" class="navbar-brand">
-      <a id="home" href="#">Home</a>
-      </div>
-      	<button id="btn" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+	    <button id="btn" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
+
+       <a id="brand" class="navbar-brand" href="#">Home</a>
+      
 </div> <!-- end of navbar-header -->
 <div class="collapse navbar-collapse"  id="collapsable-nav">
 	<ul id="nav-list" class="nav navbar-nav navbar-right">
 		<li>
-			<a class="visible-xs visible-sm" href="#beef">Beef </a>
+			<a href="#beef">Beef </a>
 		</li>
 		<li>
-			<a class="visible-xs visible-sm" href="#bee">Bee </a>
+			<a  href="#bee">Bee </a>
 		</li>
 		<li >
-			<a class="visible-xs visible-sm" href="#bef">Bef </a>
+			<a  href="#bef">Bef </a>
 		</li>
 	</ul>
 </div>
@@ -77,6 +81,7 @@
 			Okay so here I am in Sublime Text and I'm looking at the file called grid-before.html which is located in the examples Lecture26 folder. And the first thing I'm going to do is I'm going to go ahead and remove this HTML5 shim. It's really only needed here as it says here for IE 8 support. 
 			Okay so here I am in Sublime Text and I'm looking at the file called grid-before.html which is located in the examples Lecture26 folder. And the first thing I'm going to do is I'm going to go ahead and remove this HTML5 shim. It's really only needed here as it says here for IE 8 support. 
 			Okay so here I am in Sublime Text and I'm looking at the file called grid-before.html which is located in the examples Lecture26 folder. And the first thing I'm going to do is I'm going to go ahead and remove this HTML5 shim. It's really only needed here as it says here for IE 8 support. 
+			Okay so here I am in Sublime Text and I'm looking at the file called grid-before.html which is located in the examples Lecture26 folder. And the first thing I'm going to do is I'm going to go ahead and remove this HTML5 shim. It's really only needed here as it says here for IE 8 support. 
 			<br><a href="#top" class="hidden-md hidden-lg">Back to top </a>
 		</p> 
 		</section>
@@ -84,7 +89,5 @@
 </div>
 
 
-<script scr="js/jquery-2.1.4.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
